--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -21,9 +21,10 @@
 <link rel="import" href="../bc/neon-animation/neon-animated-pages.html">
 
 <link rel="import" href="cookie-display.html">
+<link rel="import" href="global-behavior.html">
 <link rel="import" href="item-collection.html">
 <link rel="import" href="recipe-details.html">
-<!--<link rel="import" href="recipe-forms.html">-->
+<link rel="import" href="recipe-forms.html">
 <link rel="import" href="recipe-notifications.html">
 <link rel="import" href="styles/global-styles.html">
 
@@ -273,7 +274,7 @@
          iron-signals. This is a workaround for:
          https://github.com/PolymerElements/iron-overlay-behavior/issues/208#issuecomment-234024428
     -->
-    <!--<recipe-forms user-role="[[user_role]]"></recipe-forms>-->
+    <recipe-forms user-role="[[user_role]]"></recipe-forms>
 
     <!-- This displays toast events. -->
     <recipe-notifications></recipe-notifications>
