Add missing layout import

--- a/src/user-display.html
+++ b/src/user-display.html
@@ -5,6 +5,7 @@
 <!-- This module shows a user card. -->
 
 <link rel="import" href="../bc/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bc/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../bc/iron-signals/iron-signals.html">
 <link rel="import" href="../bc/paper-button/paper-button.html">
 <link rel="import" href="../bc/paper-material/paper-material.html">
@@ -16,6 +17,7 @@
 
 <dom-module id="user-display">
     <template>
+        <style include="iron-flex iron-flex-alignment"></style>
         <style include="global-styles"></style>
         <style>
             :host {
