Clean up user-display
- Properly handle display of null times
- Remove redundant user role
- Move some local styles from global-styles to here
- Shorten "Last Activity" to "Last Seen"

--- a/src/global-behavior.html
+++ b/src/global-behavior.html
@@ -47,6 +47,7 @@ recipe_behaviors.global_behavior = {
     },
     stop_propagation: e => e.stopPropagation(),
     long_date: function(d) {
+        if (!d) return "";
         var date = new Date(d);
         return date.toDateString() + ' ' + date.toLocaleTimeString();
     },
