Move global-styles out of subdir
There's no need for a subdir with only one file.

--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -23,7 +23,7 @@
 
 <link rel="import" href="global-behavior.html">
 <link rel="import" href="recipe-display.html">
-<link rel="import" href="styles/global-styles.html">
+<link rel="import" href="global-styles.html">
 <link rel="import" href="user-display.html">
 
 <dom-module id="item-collection">
