--- a/src/recipe-details.html
+++ b/src/recipe-details.html
@@ -23,7 +23,7 @@
 
 <link rel="import" href="cookie-display.html">
 <link rel="import" href="global-behavior.html">
-<link rel="import" href="styles/global-styles.html">
+<link rel="import" href="global-styles.html">
 
 <dom-module id="recipe-details">
     <template>
