--- a/src/recipe-display.html
+++ b/src/recipe-display.html
@@ -13,7 +13,7 @@
 <link rel="import" href="../bc/polymer/polymer.html">
 
 <link rel="import" href="global-behavior.html">
-<link rel="import" href="styles/global-styles.html">
+<link rel="import" href="global-styles.html">
 
 <dom-module id="recipe-display">
     <template>
