--- a/src/recipe-form.html
+++ b/src/recipe-form.html
@@ -12,7 +12,7 @@
 
 <link rel="import" href="form-behavior.html">
 <link rel="import" href="global-behavior.html">
-<link rel="import" href="styles/global-styles.html">
+<link rel="import" href="global-styles.html">
 
 <dom-module id="recipe-form">
     <template>
