--- a/src/recipe-notifications.html
+++ b/src/recipe-notifications.html
@@ -9,7 +9,7 @@
 <link rel="import" href="../bc/paper-toast/paper-toast.html">
 <link rel="import" href="../bc/polymer/polymer.html">
 
-<link rel="import" href="styles/global-styles.html">
+<link rel="import" href="global-styles.html">
 
 <dom-module id="recipe-notifications">
     <template>
