--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -26,7 +26,7 @@
 <link rel="import" href="recipe-details.html">
 <link rel="import" href="recipe-forms.html">
 <link rel="import" href="recipe-notifications.html">
-<link rel="import" href="styles/global-styles.html">
+<link rel="import" href="global-styles.html">
 
 <dom-module id="recipes-app">
 <template>
