Add missing import

--- a/src/user-form.html
+++ b/src/user-form.html
@@ -15,6 +15,7 @@
 
 <link rel="import" href="form-behavior.html">
 <link rel="import" href="global-behavior.html">
+<link rel="import" href="global-styles.html">
 
 <dom-module id="user-form">
     <template>
