Fix CSS typo that was breaking dialog width

--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -58,7 +58,7 @@
                 border-right: 1px solid var(--dark-primary-color);
                 background-color: var(--primary-background-color);
             }
-            --responsive-dialog-paper-dialog {
+            --responsive-dialog-paper-dialog: {
                 width: 500px;
             }
         }
