Fix page navigation on recipe create and delete
It was still using the old page.js method, rather than the new app-route
method.

--- a/src/recipe-details.html
+++ b/src/recipe-details.html
@@ -501,7 +501,8 @@
                         name: "success-toast",
                         data: this.recipe.title + " deleted",
                     });
-                    page.show('/');
+                    window.history.pushState({}, null, "/");
+                    window.dispatchEvent(new CustomEvent("location-changed"));
                 },
                 loading_data_failed: function() {
                     this.fire("iron-signal", {
