--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -258,7 +258,10 @@
                         this.push("items", this.new_item);
                     }
                     else if (this.itemName === "recipes") {
-                        page.show("/recipes/" + this.new_item.id);
+                        window.history.pushState({}, null,
+                                "/recipes/"+this.new_item.id+"/");
+                        window.dispatchEvent(new CustomEvent("location-changed"));
+
                         this.fire("iron-signal", {
                             name: "success-toast",
                             data: this.new_item.title + " created",
