--- a/src/global-behavior.html
+++ b/src/global-behavior.html
@@ -45,6 +45,13 @@ recipe_behaviors.global_behavior = {
             || role === this.constants.user_role_enum.moderator
             || role === this.constants.user_role_enum.user;
     },
+    // A generic AJAX error handler.
+    loading_data_failed: function() {
+        this.fire("iron-signal", {
+            name: "error-toast",
+            data: "Failed to communicate with server :(",
+        });
+    },
     stop_propagation: e => e.stopPropagation(),
     long_date: function(d) {
         if (!d) return "";
