Move recipe editing into separate forms
This is a ridiculous commit, but there's no good way to split it up
without breaking things.

- Remove edit mode button on recipe-details

- Split recipe-details into app-grid paper-materials with edit buttons

- Create a form for each box

- Put dropdown AJAX calls in the forms, so that they refresh on form
  open (no more having to reload the page).

- Use a smaller back arrow.

Part of #3
Fix #5

--- a/src/form-behavior.html
+++ b/src/form-behavior.html
@@ -15,6 +15,11 @@ recipe_behaviors.form_behavior = {
     close: function() {
         this.$.dialog.close();
     },
+    // Call this when the dialog may have changed size, such as when a textarea
+    // is modified.
+    size_changed: function() {
+        if (this.$.dialog) this.$.dialog.notifyResize();
+    },
     resolve_dialog: function(e, reason) {
         this.fire('closed', reason);
     },
