--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -61,6 +61,7 @@
             --responsive-dialog-paper-dialog: {
                 width: 500px;
             }
+            --app-grid-gutter: 5px;
         }
         div[main-title] {
             font-size: x-large;
