--- a/src/global-styles.html
+++ b/src/global-styles.html
@@ -27,6 +27,9 @@
                 color:              inherit;
                 text-decoration:    none;
             }
+            recipe-display, user-display {
+                margin-bottom: var(--app-grid-gutter);
+            }
             paper-fab {
                 position:   fixed;
                 bottom:     1em;
@@ -38,7 +41,6 @@
                  padding-right:     0.5em;
                  padding-top:       0.5em;
                  padding-bottom:    0.5em;
-                 margin-top:        0.5em;
             }
             .card-title {
                 margin-top:     0;
