--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -144,7 +144,7 @@
         </app-drawer>
 
         <app-header-layout fullbleed>
-            <app-header fixes effects="waterfall">
+            <app-header fixed effects="waterfall">
                 <app-toolbar>
                     <paper-icon-button icon="icons:menu" drawer-toggle>
                     </paper-icon-button>
